--- a/.github/workflows/step1.yml
+++ b/.github/workflows/step1.yml
@@ -23,14 +23,15 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
+      - name: MESSAGE || Checkout code
+        uses: actions/checkout@v4
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
+      - name: MESSAGE || Run a one-line script
         run: echo Hello, world!
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: MESSAGE || Run a multi-line script
         run: |
-          echo "The workspace is located at $GITHUB_WORKSPACE"
-          echo The workspace is located at $GITHUB_WORKSPACE
+          echo "Quoted The workspace is located at $GITHUB_WORKSPACE"
+          echo Unquoted The workspace is located at $GITHUB_WORKSPACE
