--- a/.github/workflows/step1.yml
+++ b/.github/workflows/step1.yml
@@ -16,7 +16,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  randomname:
+  randomfirst:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -35,3 +35,15 @@ jobs:
         run: |
           echo "Quoted The workspace is located at $GITHUB_WORKSPACE"
           echo Unquoted The workspace is located at $GITHUB_WORKSPACE
+  randomsecond:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be
+    steps:
+      - name: MESSAGE || Echoing from the second job 2
+        run: echo Hello, world!
+
+      # Runs a set of commands using the runners shell
+      - name: MESSAGE || Run a multi-line script
+        run: Unquoted The workspace is located at $GITHUB_WORKSPACE
