--- a/.github/workflows/step1.yml
+++ b/.github/workflows/step1.yml
@@ -26,24 +26,31 @@ jobs:
       - name: MESSAGE || Checkout code
         uses: actions/checkout@v4
 
-      # Runs a single command using the runners shell
-      - name: MESSAGE || Run a one-line script
-        run: echo Hello, world!
+
 
       # Runs a set of commands using the runners shell
       - name: MESSAGE || Run a multi-line script
         run: |
           echo "Quoted The workspace is located at $GITHUB_WORKSPACE"
           echo Unquoted The workspace is located at $GITHUB_WORKSPACE
+
   randomsecond:
+    needs: randomfirst
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be
     steps:
       - name: MESSAGE || Echoing from the second job 2
-        run: echo Hello, world!
+        run: Hello, world!
 
-      # Runs a set of commands using the runners shell
-      - name: MESSAGE || Run a multi-line script
-        run: Unquoted The workspace is located at $GITHUB_WORKSPACE
+
+  randomthird:
+    needs: [randomfirst, randomsecond]
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be
+    steps:
+      - name: MESSAGE || Echoing from the third job 3
+        run: echo Hello, world!
