--- a/.github/workflows/step1.yml
+++ b/.github/workflows/step1.yml
@@ -54,3 +54,12 @@ jobs:
     steps:
       - name: MESSAGE || Echoing from the third job 3
         run: echo Hello, world!
+
+  randomfourth:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be
+    steps:
+      - name: MESSAGE || Echoing from the third job 3
+        run: echo Hello, world00000000000000000
