--- a/.github/workflows/step1.yml
+++ b/.github/workflows/step1.yml
@@ -19,12 +19,17 @@ jobs:
   randomfirst:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    outputs:
+      status: ${{ steps.set_status.outputs.result }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      - id: set_status
+        run: echo "::set-output name=result::success"
+
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: MESSAGE || Checkout code
-        uses: actions/checkout@v4
+      #- name: MESSAGE || Checkout code
+      #  uses: actions/checkout@v4
 
 
 
