--- a/.github/workflows/step1.yml
+++ b/.github/workflows/step1.yml
@@ -58,7 +58,7 @@ jobs:
         run: echo Hello, world!
 
   randomfourth:
-    needs: [randomthird]
+    needs: [randomsecond]
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
