--- a/.github/workflows/step1.yml
+++ b/.github/workflows/step1.yml
@@ -30,7 +30,7 @@ jobs:
           python-version: '3.10'  # or any version you need
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install -r libs/requirements.txt
 
       - name: Run your script or tests
         run: python your_script.py
