--- a/.github/workflows/step1.yml
+++ b/.github/workflows/step1.yml
@@ -30,13 +30,13 @@ jobs:
           python-version: '3.10'  # or any version you need
 
       - name: Get installed packages
-        run: pip freeze > libs/before_install.txt
+        run: pip freeze
 
       - name: Install dependencies
         run: pip install -r libs/requirements.txt
 
       - name: Get installed packages
-        run: pip freeze > libs/after_install.txt
+        run: pip freeze
 
       - name: Run your script or tests
         run: python core/transform.py
