--- a/.github/workflows/step1.yml
+++ b/.github/workflows/step1.yml
@@ -29,8 +29,11 @@ jobs:
         with:
           python-version: '3.10'  # or any version you need
 
-      - name: Get installed packages
-        run: pip freeze
+      - name: Cache pip
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
 
       - name: Install dependencies
         run: pip install -r libs/requirements.txt
@@ -38,8 +41,8 @@ jobs:
       - name: Get installed packages
         run: pip freeze
 
-      - name: Run your script or tests
-        run: python core/transform.py
+      #- name: Run your script or tests
+      #  run: python core/transform.py
 
   randomsecond:
     needs: randomfirst
