--- a/.github/workflows/step1.yml
+++ b/.github/workflows/step1.yml
@@ -34,6 +34,8 @@ jobs:
         with:
           path: ~/.cache/pip
           key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
 
       - name: Install dependencies
         run: pip install -r libs/requirements.txt
