--- a/.github/workflows/step1.yml
+++ b/.github/workflows/step1.yml
@@ -24,23 +24,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'  # or any version you need
+      - name: a1
+        run: echo ${{ hashFiles('libs/a1.txt') }}
 
-      - name: Cache pip
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-
-      - name: Install dependencies
-        run: pip install -r libs/requirements.txt
-
-      - name: Get installed packages
-        run: pip freeze
-
+      - name: a2
+        run: echo ${{ hashFiles('libs/a2.txt') }}
 
