--- a/.github/workflows/step1.yml
+++ b/.github/workflows/step1.yml
@@ -33,10 +33,10 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('libs/requirements.txt') }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('libs/a1.txt') }}
 
       - name: Install dependencies
-        run: pip install -r libs/requirements.txt
+        run: pip install -r libs/a1.txt
 
       - name: Get installed packagesd
         run: pip freeze
