--- a/.github/workflows/step1.yml
+++ b/.github/workflows/step1.yml
@@ -33,10 +33,12 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('libs/a1.txt') }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('libs/a2.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
 
       - name: Install dependencies
-        run: pip install -r libs/a1.txt
+        run: pip install -r libs/a2.txt
 
       - name: Get installed packagesdf
         run: pip freeze
