--- a/.github/workflows/step1.yml
+++ b/.github/workflows/step1.yml
@@ -28,6 +28,25 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'  # or any version you need
+      
+      - name: Printing variables
+        run: |
+          echo "GITHUB_REF: $GITHUB_REF"
+          echo "GITHUB_REF_TYPE: $GITHUB_REF_TYPE"
+          echo "GITHUB_SHA: $GITHUB_SHA"
+          echo "GITHUB_REPOSITORY: $GITHUB_REPOSITORY"
+          echo "GITHUB_RUN_ID: $GITHUB_RUN_ID"
+          echo "GITHUB_RUN_NUMBER: $GITHUB_RUN_NUMBER"
+          echo "GITHUB_WORKFLOW: $GITHUB_WORKFLOW"
+          echo "GITHUB_ACTOR: $GITHUB_ACTOR"
+          echo "GITHUB_EVENT_NAME: $GITHUB_EVENT_NAME"
+          echo "GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
+          echo "GITHUB_TRIGGERING_ACTOR: $GITHUB_TRIGGERING_ACTOR"
+          echo "GITHUB_REPOSITORY_OWNER: $GITHUB_REPOSITORY_OWNER"
+          echo "GITHUB_REPOSITORY_ID: $GITHUB_REPOSITORY_ID"
+          echo "GITHUB_PATH: $GITHUB_PATH"
+          echo "GITHUB_JOB: $GITHUB_JOB"
+          echo "GITHUB_ACTION_REPOSITORY: $GITHUB_ACTION_REPOSITORY"
 
       - name: Cache pip
         uses: actions/cache@v4
@@ -43,4 +62,13 @@ jobs:
       - name: Get installed packagesdf
         run: pip freeze
 
+  randomsecond:
+    needs: randomfirst
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be
+    steps:
+      - name: Run your script or tests
+        run: python core/transform.py
 
