--- a/.github/workflows/step1.yml
+++ b/.github/workflows/step1.yml
@@ -64,7 +64,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y freetds-dev libkrb5-dev libssl-dev libgssapi-krb5-2
           # pip install --no-build-isolation --no-cache-dir "setuptools<72"
-          pip install -U test_dbt_conflicts/default.runner/prefect-ef
+          pip install -U default.runner/prefect-ef
 
           
       - name: Get installed packagesdf
